--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon ./src/app.js"
+    "start": "node ./src/app.js"
   },
   "repository": {
     "type": "git",
